[package]
name = "rayui"
version = "0.1.0"
authors = ["Ricky12Awesome <rickygraveen@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]

# May need these in the future
#crossbeam-utils = "^0.8"
#derive_builder = "^0.10"
#lazy_static = "^1.4"

num-traits = "^0.2"
raylib = "^3.5"

# Will eventually be used for saving settings?
serde = { version = "^1.0", features = ["derive"] }
serde_json = "^1.0"